# lib-util-cpp

./: .gitignore  .travis.yml  README.md
src/: histogram.hpp  mathext.hpp
tests/: CMakeLists.txt  test_mathext.cpp  test_stopwatch.cpp
